--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lay1010.github.io-master</name>
+	<name>songxin1990.github.io</name>
 	<comment></comment>
 	<projects>
 	</projects>
