--- a/_config.yml
+++ b/_config.yml
@@ -32,12 +32,12 @@ disqus:
   shortname: 3gods
 
 # 主题设置，自动激活某个标签
-active: 关于
+active: 交易
 
 # 首页除了最新文章外显示分类
 cates: 
-  - Optimization
-  - LaTeX  
+  - 旅行
+  - 技术  
    
 
 # 中文本地化
