修改邮箱，修改google搜索技巧

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ markdown: kramdown
 # 作者信息
 author: 
   name: 宋鑫
-  email: 504252262@qq.com
+  email: songxin@3gods.com
   github: http://github.com/songxin1990
   linkedin: https://www.linkedin.com/in/song-xin/
   zhihu: https://www.zhihu.com/people/3gods
