modify some posts

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
 
 # 站点信息
 title: 宋鑫的博客
-description: songxin blog
+description: 宋鑫的博客，关于成长，交易，技术
 url: http://3gods.com
 rss_url: /pages/atom.xml
 
