--- a/_config.yml
+++ b/_config.yml
@@ -85,5 +85,11 @@ locals:
 #gems:
   #- jekyll-gist
 
-
+deploy:
+- type: git
+  repo: 'git@github.com:songxin1990/songxin1990.github.io.git'
+  branch: master
+- type: git
+  repo: 'git@git.coding.net:songxin1990/songxin1990.git'
+  branch: coding-pages
 
