--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ url: http://3gods.com
 rss_url: /pages/atom.xml
 
 # gavatar头像及Favicon
-gavatar: /public/img/pikachu.svg
-favicon: /public/img/fav.ico
+gavatar: http://7xnlfe.com1.z0.glb.clouddn.com/fav.ico
+favicon: http://7xnlfe.com1.z0.glb.clouddn.com/fav.ico
 
 # google analytics 设置
 ga:
