modify kafka blog;

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ author:
   email: songxin@3gods.com
   github: http://github.com/songxin1990
   linkedin: https://www.linkedin.com/in/song-xin/
+  facebook: https://www.facebook.com/profile.php?id=100018273099120
+  twitter: https://twitter.com/songxin1990
+  googleplus: https://plus.google.com/110973279070546034423
   zhihu: https://www.zhihu.com/people/3gods
 
 # 站点信息
