--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author:
 
 # 站点信息
 title: 宋鑫的官方网站
-description: 编程，写作，思考，创造，得道
+description: 编程，写作，思考，实践，得道
 url: http://3gods.com
 rss_url: /atom.xml
 img_url: http://img.3gods.com
