--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
 # 站点信息
 title: 宋鑫的官方网站
 description: 编程，写作，思考，实践，得道
-url: http://3gods.com
+url: https://3gods.com
 rss_url: /atom.xml
 img_url: /public/img/life
 
