add baidu idnex

--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ author:
   zhihu: https://www.zhihu.com/people/zenhacker
 
 # 站点信息
-title: 宋鑫的官方网站
-description: 编程，写作，思考，实践，得道
+title: 宋鑫
+description: 敬畏时间与空间，用实践出真知
 url: https://3gods.com
 rss_url: /atom.xml
 img_url: /public/img/life
