--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,12 +1,17 @@
+- name: Zhihu
+  url: https://www.zhihu.com/people/zenhacker
+  class: icon-zhihu
+  title: 知乎
+
 - name: GitHub
   url: http://github.com/songxin1990
   class: icon-github
   title: Code for fun
 
-- name: Zhihu
-  url: https://www.zhihu.com/people/zenhacker
-  class: icon-z
-  title: 知乎
+- name: StackOverflow
+  url: https://stackoverflow.com/users/6708214/songxin
+  class: icon-stack-overflow
+  title: Ask me a Question
 
 - name: Linkedin
   url: http://linkedin.com/songxin1990
