--- a/_data/language.yml
+++ b/_data/language.yml
@@ -7,18 +7,18 @@ more: "More ›"
 more_articles: "更多文章"
 navigation_title: "Navigation"
 new_blog_entries: "最新文章"
-next: "Next"
-next_posts: "Next Posts"
-previous: "Previous"
-previous_posts: "Previous Posts"
-read: "Read"
-read_more: "Read More&nbsp;›"
+next: "下一个"
+previous: "上一个"
+next_posts: "下一篇"
+previous_posts: "上一篇"
+read: "阅读"
+read_more: "阅读更多&nbsp;›"
 if_you_are_not_redirected_automatically: "If you are not redirected automatically,"
 click_here: "click here"
 next_post_in: "Next Post in"
 previous_post_in: "Previous Post in"
 breadcrumb_start: "首页"
-edit: "Edit"
+edit: "编辑"
 this_content_is_open_source: "This content is open source."
 help_improve_it: "Help improve it"
 enter_search_term: ""
