--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,7 @@ songxin: # replace this with your info
   name: "宋鑫"
   siterole: "投机家, 软件开发"
   uri: https://3gods.com/
-  email: songxin@3gods.com
+  email: xinsong666@qq.com
   twitter: "@songxin1990"
   qq: 504252262
   github: http://github.com/songxin1990
