add deadlock interview

--- a/_data/language.yml
+++ b/_data/language.yml
@@ -22,3 +22,6 @@ edit: "编辑"
 this_content_is_open_source: "This content is open source."
 help_improve_it: "Help improve it"
 enter_search_term: ""
+
+career: "职场"
+stock: "股票"
