--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,9 +6,9 @@
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
 songxin: # replace this with your info
-  name: "宋鑫"
-  siterole: "投机家, 软件开发"
-  uri: https://3gods.com/
+  name: "freeslaver"
+  siterole: "交易，编程，鞋子"
+  uri: https://freeslaver.com/
   email: xinsong666@qq.com
   twitter: "@songxin1990"
   qq: 504252262
