--- a/_config.yml
+++ b/_config.yml
@@ -8,23 +8,24 @@
 #                                                 /____/
 #
 # Title of your website
-title: '自由的奴隶'
+title: 'Java课堂'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: '交易,编程，写作'
+slogan: '专注与Java程序员学习，简历，面试，职场等课程'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: '交易,编程，写作'
+description: ''
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
-credits: '<p> <a href="/">freeslaver.com</a> Created with &hearts; by <a href="/me.html">自由的奴隶</a> &copy; 2013-2999 <a href="http://www.miitbeian.gov.cn" target="_blank" rel="nofollow">粤ICP备17122701号</a>.</p>'
+credits: '<p> <a href="/">javaclass.net</a> Created with &hearts; by <a href="/me.html">Java课堂</a> &copy; 2013-2999 <a 
+href="http://www.miitbeian.gov.cn" target="_blank" rel="nofollow">粤ICP备17122701号</a>.</p>'
 
 # Main author of the website
 author: songxin
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://freeslaver.com'
+url: 'https://javaclass.net'
 #baseurl: '/feeling-responsive'
 
 # This is for the editing function in _/includes/improve_content
