--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,13 +31,15 @@
       url: "/ops/"
 
 
-- title: "职场"
+- title: "求职"
   url: "#"
   side: left
   dropdown:
     - title: "简历"
       url: "/resume/"
-    - title: "面试题面经"
+    - title: "面试"
+      url: "/interview/"
+    - title: "Java面试题面经"
       url: "/interview-question-experience/"
     - title: "职场"
       url: "/career/"
